--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nutrigene",
+  "name": "next-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,25 +8,29 @@
     "build": "next build",
     "start": "next start",
     "lint": "./node_modules/eslint/bin/eslint.js \"**/*.js\"",
-    "lint-diff" : "git diff --name-only --cached --relative | grep \\\\.js$ | xargs ./node_modules/eslint/bin/eslint.js",
-    "lint-fix" : "./node_modules/eslint/bin/eslint.js \"**/*.js\" --fix",
-    "precommit" : "npm run lint-diff",
-    "test": "npm run lint"
+    "lint-diff": "git diff --name-only --cached --relative | grep \\\\.js$ | xargs ./node_modules/eslint/bin/eslint.js",
+    "lint-fix": "./node_modules/eslint/bin/eslint.js \"**/*.js\" --fix",
+    "precommit": "npm run lint-diff",
+    "test": "npm run lint",
+    "now": "./node_modules/.bin/now --public"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Wolox/Nutrigene.git"
+    "url": ""
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Wolox/Nutrigene/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/Wolox/Nutrigene#readme",
+  "homepage": "",
   "dependencies": {
-    "next": "^3.0.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "@zeit/next-sass": "^0.1.2",
+    "next": "^5.1.0",
+    "node-sass": "^4.8.3",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "sass-loader": "^7.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
@@ -38,6 +42,7 @@
     "eslint-plugin-prettier": "^2.1.2",
     "eslint-plugin-react": "^7.2.0",
     "husky": "^0.14.3",
+    "now": "^11.1.4",
     "prettier": "^1.5.3"
   }
 }
